@@ -5,8 +5,10 @@ apt (0.9.3) unstable; urgency=low
     - remove the message size limit from ioprintf and strprintf
   * apt-pkg/contrib/configuration.cc:
     - add a more versatile Dump() method
+  * apt-pkg/acquire-worker.cc:
+    - use Dump() to generate the configuration message for sending
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:27:47 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:28:13 +0200
 
 apt (0.9.2) unstable; urgency=low
 
